update controller logic and swagger
