# routes/api_v1.php
@@ -2,8 +2,10 @@
 
 use App\Http\Controllers\Api\V1\UserController;
 
-Route::get('/user', function () {
-    return 'user index v1';
-});
+// Route::get('/user', function () {
+//     return 'user index v1';
+// });
 
-Route::get('/user/{userId}', [UserController::class, 'show']);
+// Route::get('/user/{userId}', [UserController::class, 'show']);
+
+Route::resource('users', UserController::class);
